--- a/package.json
+++ b/package.json
@@ -4,16 +4,18 @@
   "description": "base project with hapi framework and typescript",
   "main": "server.ts",
   "scripts": {
-    "start": "ts-node server.ts"
+    "start": "ts-node server.ts",
+    "build": "tsc --build && cp .env ./build/.env",
+    "restart": "sudo rm -rf build && tsc --build && cp .env ./build/.env && pm2 restart all && pm2 logs"
   },
   "author": "Abhishek Dhadwal",
   "license": "ISC",
   "dependencies": {
-    "@hapi/boom": "^9.1.2",
-    "@hapi/hapi": "^20.1.3",
+    "@hapi/boom": "^9.1.3",
+    "@hapi/hapi": "^20.1.5",
     "@hapi/inert": "^6.0.3",
-    "@hapi/vision": "^6.0.1",
-    "dotenv": "^9.0.2",
+    "@hapi/vision": "^6.1.0",
+    "dotenv": "^10.0.0",
     "hapi-auth-jwt2": "^10.2.0",
     "inert": "^5.1.3",
     "joi": "^17.4.0",
@@ -23,11 +25,11 @@
     "vision": "^5.4.4"
   },
   "devDependencies": {
-    "@types/hapi__hapi": "^20.0.8",
+    "@types/hapi__hapi": "^20.0.9",
     "@types/hapi__inert": "^5.2.2",
-    "@types/hapi__joi": "^17.1.6",
+    "@types/hapi__joi": "^17.1.7",
     "@types/hapi__vision": "^5.5.2",
-    "@types/node": "^15.3.0",
-    "hapi-swagger": "^14.1.3"
+    "@types/node": "^16.0.0",
+    "hapi-swagger": "^14.2.1"
   }
 }
