UPDATED ON JULY 31 2021

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,11 @@
             "sourceMap": true,
             "module": "commonjs",
             "moduleResolution": "node",
-      }
+            "outDir": "build"
+      },
+      "exclude": [
+            "node_modules"
+      ]
+      
 }
 
