--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "@hapi/hapi": "^20.1.5",
     "@hapi/inert": "^6.0.3",
     "@hapi/vision": "^6.1.0",
+    "bcrypt": "^5.0.1",
     "dotenv": "^10.0.0",
     "hapi-auth-jwt2": "^10.2.0",
     "inert": "^5.1.3",
-    "joi": "^17.4.0",
+    "joi": "^17.4.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.11",
     "ts-mongoose": "0.0.24",
@@ -26,10 +27,10 @@
   },
   "devDependencies": {
     "@types/hapi__hapi": "^20.0.9",
-    "@types/hapi__inert": "^5.2.2",
+    "@types/hapi__inert": "^5.2.3",
     "@types/hapi__joi": "^17.1.7",
-    "@types/hapi__vision": "^5.5.2",
-    "@types/node": "^16.0.0",
-    "hapi-swagger": "^14.2.1"
+    "@types/hapi__vision": "^5.5.3",
+    "@types/node": "^16.4.8",
+    "hapi-swagger": "^14.2.4"
   }
 }
